EX-2: Practicing Databinding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
       <div class="app-warning-alert"></div>
       <br>
       <app-success-alert></app-success-alert>
+      <hr>
+      <app-user></app-user>
     </div>
   </div>
 </div>
