EX-3: Practicing Directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,8 @@
       <app-success-alert></app-success-alert>
       <hr>
       <app-user></app-user>
+      <hr>
+      <app-details></app-details>
     </div>
   </div>
 </div>
